--- a/app/src/main/res/layout/activity_skin_menu.xml
+++ b/app/src/main/res/layout/activity_skin_menu.xml
@@ -29,6 +29,8 @@
         android:textColor="@color/gray"
         android:textSize="14sp"
         android:textStyle="bold"
+        android:paddingRight="10dp"
+        android:paddingLeft="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
