--- a/app/src/main/res/layout/activity_eyes_image.xml
+++ b/app/src/main/res/layout/activity_eyes_image.xml
@@ -11,7 +11,7 @@
         android:layout_width="120dp"
         android:layout_height="31dp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="38dp"
         android:fontFamily="sans-serif-medium"
         android:text="MEDSCAN"
         android:textColor="@color/color2"
@@ -24,7 +24,7 @@
         android:layout_width="99dp"
         android:layout_height="70dp"
         android:layout_marginStart="64dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="26dp"
         android:layout_marginEnd="28dp"
         app:layout_constraintEnd_toStartOf="@+id/textView18"
         app:layout_constraintHorizontal_bias="1.0"
@@ -35,8 +35,8 @@
     <ImageView
         android:id="@+id/image_ray"
         android:layout_width="370dp"
-        android:layout_height="384dp"
-        android:layout_marginTop="40dp"
+        android:layout_height="380dp"
+        android:layout_marginTop="45dp"
         android:layout_marginBottom="268dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +45,7 @@
         app:srcCompat="@drawable/eyes_bro" />
 
     <TextView
-        android:id="@+id/textView24"
+        android:id="@+id/text_eyes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="33dp"
@@ -67,7 +67,7 @@
         android:layout_marginEnd="80dp"
         app:layout_constraintBottom_toTopOf="@+id/btn_upload_rays"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView24"
+        app:layout_constraintTop_toBottomOf="@+id/text_eyes"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/ic_photo" />
 
