--- a/app/src/main/res/layout/activity_ray_uploaded.xml
+++ b/app/src/main/res/layout/activity_ray_uploaded.xml
@@ -11,7 +11,7 @@
         android:layout_width="120dp"
         android:layout_height="31dp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="38dp"
         android:fontFamily="sans-serif-medium"
         android:text="MEDSCAN"
         android:textColor="@color/color2"
@@ -24,7 +24,7 @@
         android:layout_width="99dp"
         android:layout_height="70dp"
         android:layout_marginStart="64dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="26dp"
         android:layout_marginEnd="28dp"
         app:layout_constraintEnd_toStartOf="@+id/textView18"
         app:layout_constraintHorizontal_bias="1.0"
@@ -44,7 +44,7 @@
         app:srcCompat="@drawable/upload" />
 
     <TextView
-        android:id="@+id/textView24"
+        android:id="@+id/text_lung"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="33dp"
@@ -66,7 +66,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView24"
+        app:layout_constraintTop_toBottomOf="@+id/text_lung"
         app:srcCompat="@drawable/upload_2" />
 
     <Button
