--- a/app/src/main/res/layout/activity_doctors.xml
+++ b/app/src/main/res/layout/activity_doctors.xml
@@ -75,8 +75,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/name_doc1"
+            android:layout_alignParentEnd="true"
             android:layout_marginStart="1dp"
             android:layout_marginTop="1dp"
+            android:layout_marginEnd="7dp"
             android:layout_toEndOf="@+id/doctor1"
             android:text="@string/kidney_and_diabetes_consultant_nephrologist_specialized_in_adult"
             android:textColor="@color/gray"
@@ -173,8 +175,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/nam_doc3"
+            android:layout_alignParentEnd="true"
             android:layout_marginStart="1dp"
             android:layout_marginTop="1dp"
+            android:layout_marginEnd="7dp"
             android:layout_toEndOf="@+id/doctor3"
             android:text="@string/internist_specialized_in_adult_cardiology_pediatric_cardiology_adult_gastroenterology_and"
             android:textColor="@color/gray"
@@ -269,8 +273,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/nam_doc5"
+            android:layout_alignParentEnd="true"
             android:layout_marginStart="1dp"
             android:layout_marginTop="1dp"
+            android:layout_marginEnd="7dp"
             android:layout_toEndOf="@+id/doctor5"
             android:text="@string/consultant_of_nephrology_and_kidney_transplantation_and_consultant"
             android:textColor="@color/gray"
