--- a/app/src/main/res/layout/activity_eyes_doctors.xml
+++ b/app/src/main/res/layout/activity_eyes_doctors.xml
@@ -89,8 +89,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/eyes_name_doc1"
+                android:layout_alignParentEnd="true"
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="1dp"
+                android:layout_marginEnd="7dp"
                 android:layout_toEndOf="@+id/eyes_doctor1"
                 android:text="@string/lecturer_of_ophthalmology_and_surgery_faculty_of_medicine_alexandria"
                 android:textColor="@color/gray"
@@ -193,8 +195,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/eyes_name_doc3"
+                android:layout_alignParentEnd="true"
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="1dp"
+                android:layout_marginEnd="7dp"
                 android:layout_toEndOf="@+id/eyes_doctor3"
                 android:text="@string/consultant_of_ophthalmology_and_lasik_at_the_international_medical_centerdoctor_of_ophthalmology"
                 android:textColor="@color/gray"
@@ -297,8 +301,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/eyes_name_doc5"
+                android:layout_alignParentEnd="true"
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="1dp"
+                android:layout_marginEnd="7dp"
                 android:layout_toEndOf="@+id/eyes_doctor5"
                 android:text="@string/instructor_of_ophthalmology_and_laser_ophthalmologist_specialized_in_lasik"
                 android:textColor="@color/gray"
