--- a/app/src/main/res/layout/activity_lung_doctors.xml
+++ b/app/src/main/res/layout/activity_lung_doctors.xml
@@ -91,8 +91,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/lung_name_doc1"
+                android:layout_alignParentEnd="true"
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="1dp"
+                android:layout_marginEnd="7dp"
                 android:layout_toEndOf="@+id/lung_doctor1"
                 android:text="@string/consultant_of_internal_chest_diseases_and_allergies_ain_shams_university"
                 android:textColor="@color/gray"
@@ -195,8 +197,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/lung_name_doc3"
+                android:layout_alignParentEnd="true"
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="1dp"
+                android:layout_marginEnd="7dp"
                 android:layout_toEndOf="@+id/lung_doctor3"
                 android:text="@string/professor_of_pulmonary_medicine_and_allergy_faculty_of_medicine_alexandria_university"
                 android:textColor="@color/gray"
@@ -299,8 +303,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/lung_name_doc5"
+                android:layout_alignParentEnd="true"
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="1dp"
+                android:layout_marginEnd="7dp"
                 android:layout_toEndOf="@+id/lung_doctor5"
                 android:text="@string/chest_diseases_consultant_chest_and_respiratory"
                 android:textColor="@color/gray"
