--- a/app/src/main/res/layout/activity_shared_doc3.xml
+++ b/app/src/main/res/layout/activity_shared_doc3.xml
@@ -39,10 +39,12 @@
     <TextView
         android:id="@+id/textView37"
         android:layout_width="145dp"
-        android:layout_height="245dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/textView6"
+        android:layout_alignParentEnd="true"
         android:layout_marginStart="-165dp"
-        android:layout_marginTop="-250dp"
+        android:layout_marginTop="-260dp"
+        android:layout_marginEnd="25dp"
         android:layout_toEndOf="@+id/imageView5"
         android:text="@string/internist_specialized_in_adult_cardiology_pediatric_cardiology_adult_gastroenterology_and_endoscopy_adult_kidney_adult_liver_adult_diabetes_and_endocrinology_general_internal_medicine"
         android:textColor="@color/gray"
@@ -97,11 +99,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageView"
-        android:layout_alignParentEnd="true"
         android:layout_marginStart="23dp"
 
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="17dp"
         android:layout_toEndOf="@+id/imageView7"
         android:text="@string/agami_alex_matrouh_road"
         android:textColor="@color/black"
