--- a/app/src/main/res/layout/activity_skin_doctors.xml
+++ b/app/src/main/res/layout/activity_skin_doctors.xml
@@ -90,8 +90,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/skin_name_doc1"
+                android:layout_alignParentEnd="true"
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="1dp"
+                android:layout_marginEnd="7dp"
                 android:layout_toEndOf="@+id/skin_doc1"
                 android:text="@string/phd_and_consultant_of_dermatology_dermatology_and_laser_therapy"
                 android:textColor="@color/gray"
@@ -192,8 +194,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/skin_name_doc3"
+                android:layout_alignParentEnd="true"
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="1dp"
+                android:layout_marginEnd="7dp"
                 android:layout_toEndOf="@+id/skin_doc3"
                 android:text="@string/dermatology_cosmetology_and_laser_specialist_kasr_al_ainy_cairo_university"
                 android:textColor="@color/gray"
@@ -294,8 +298,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/skin_name_doc5"
+                android:layout_alignParentEnd="true"
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="1dp"
+                android:layout_marginEnd="7dp"
                 android:layout_toEndOf="@+id/skin_doc5"
                 android:text="@string/consultant_dermatologist_cosmetic_and_laser_at_cairo_university_a_dermatologist"
                 android:textColor="@color/gray"
