--- a/app/src/main/res/layout/activity_shared_doc4.xml
+++ b/app/src/main/res/layout/activity_shared_doc4.xml
@@ -37,12 +37,12 @@
     <TextView
         android:id="@+id/textView36"
         android:layout_width="280dp"
-        android:layout_height="250dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/textView6"
         android:layout_alignParentStart="true"
         android:layout_marginStart="40dp"
         android:layout_marginTop="19dp"
-        android:layout_marginEnd="-166dp"
+        android:layout_marginEnd="-156dp"
         android:layout_toStartOf="@+id/imageView5"
         android:text="@string/kidney_disease_renal_insufficiency_nephrolithiasis_and_immunology_dialysis_internal_diseases_pressure_and_diabetes_plasmapheresis_sessions_for_immune_diseases"
         android:textColor="@color/gray"
@@ -97,11 +97,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageView"
-        android:layout_alignParentEnd="true"
         android:layout_marginStart="23dp"
 
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="17dp"
         android:layout_toEndOf="@+id/imageView7"
         android:text="@string/tanta_al_bahar_street_university_bridge"
         android:textColor="@color/black"
