--- a/app/src/main/res/layout/activity_shared_doc5.xml
+++ b/app/src/main/res/layout/activity_shared_doc5.xml
@@ -37,10 +37,12 @@
     <TextView
         android:id="@+id/textView38"
         android:layout_width="315dp"
-        android:layout_height="202dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/textView6"
+        android:layout_alignParentEnd="true"
         android:layout_marginStart="-175dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="25dp"
         android:layout_toEndOf="@+id/imageView5"
         android:text="@string/consultant_of_nephrology_and_kidney_transplantation_and_consultant_of_pediatric_nephrology_a_nephrologist_specialized_in_general_internal_medicine_adult_nephrology_and_pediatric_nephrology"
         android:textColor="@color/gray"
@@ -95,11 +97,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageView"
-        android:layout_alignParentEnd="true"
         android:layout_marginStart="23dp"
 
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="17dp"
         android:layout_toEndOf="@+id/imageView7"
         android:text="@string/mansoura_happy_land_square"
         android:textColor="@color/black"
