--- a/app/src/main/res/layout/activity_shared_doc6.xml
+++ b/app/src/main/res/layout/activity_shared_doc6.xml
@@ -38,12 +38,12 @@
     <TextView
         android:id="@+id/textView38"
         android:layout_width="wrap_content"
-        android:layout_height="241dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/textView6"
         android:layout_alignParentStart="true"
         android:layout_marginStart="40dp"
         android:layout_marginTop="19dp"
-        android:layout_marginEnd="-195dp"
+        android:layout_marginEnd="-165dp"
         android:layout_toStartOf="@+id/imageView5"
         android:layout_toEndOf="@+id/imageView5"
         android:text="@string/consultant_of_nephrology_cardiology_and_internal_medicine_nephrologist_specialized_in_adult_diabetes_and_endocrinology_general_internal_medicine_adult_kidneys_and_adult_urology"
@@ -99,11 +99,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageView"
-        android:layout_alignParentEnd="true"
         android:layout_marginStart="23dp"
 
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="17dp"
         android:layout_toEndOf="@+id/imageView7"
         android:text="@string/raml_station_faculty_of_medicine"
         android:textColor="@color/black"
