--- a/app/src/main/res/layout/activity_ray_uploaded.xml
+++ b/app/src/main/res/layout/activity_ray_uploaded.xml
@@ -54,35 +54,50 @@
         android:textColor="@color/color2"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.137"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image_ray" />
 
     <ImageView
         android:id="@+id/choose"
-        android:layout_width="216dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="28dp"
+        android:layout_width="149dp"
+        android:layout_height="144dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="3dp"
+        android:scaleType="fitEnd"
+        app:layout_constraintBottom_toTopOf="@+id/progressBar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView24"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/upload_2" />
 
     <Button
         android:id="@+id/btn_upload_rays"
         android:layout_width="285dp"
         android:layout_height="49dp"
-        android:layout_marginBottom="59dp"
+        android:layout_marginBottom="44dp"
         android:background="@drawable/custom_button"
         android:clickable="false"
         android:fontFamily="sans-serif-medium"
-        android:text="@string/upload_now"
+        android:text="@string/check_now"
         android:textAllCaps="false"
         android:textColor="@color/color3"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_upload_rays"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
