--- a/app/src/main/res/layout/activity_ray_uploaded.xml
+++ b/app/src/main/res/layout/activity_ray_uploaded.xml
@@ -65,7 +65,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginBottom="3dp"
         android:scaleType="fitEnd"
-        app:layout_constraintBottom_toTopOf="@+id/progressBar"
+        app:layout_constraintBottom_toTopOf="@+id/prog_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView24"
@@ -90,7 +90,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ProgressBar
-        android:id="@+id/progressBar"
+        android:id="@+id/prog_bar"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
