--- a/app/src/main/res/layout/activity_skin_menu.xml
+++ b/app/src/main/res/layout/activity_skin_menu.xml
@@ -90,7 +90,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:text="@string/actinic_keratosis"
+        android:text="@string/vascular_lesions"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/textView25"
