--- a/app/src/main/res/layout/activity_skin_upload.xml
+++ b/app/src/main/res/layout/activity_skin_upload.xml
@@ -48,14 +48,12 @@
         android:id="@+id/text_skin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="33dp"
-        android:layout_marginEnd="117dp"
+        android:layout_marginTop="4dp"
         android:fontFamily="sans-serif-medium"
         android:text="@string/please_upload_a_picture_of_the_skin"
         android:textColor="@color/color2"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.138"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image_ray" />
 
@@ -73,9 +71,9 @@
 
     <Button
         android:id="@+id/btn_upload_rays"
-        android:layout_width="285dp"
-        android:layout_height="49dp"
-        android:layout_marginBottom="59dp"
+        android:layout_width="289dp"
+        android:layout_height="41dp"
+        android:layout_marginBottom="36dp"
         android:background="@drawable/custom_button"
         android:clickable="false"
         android:fontFamily="sans-serif-medium"
@@ -99,5 +97,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/choose"
         app:srcCompat="@drawable/ic_camera" />
+
+    <ProgressBar
+        android:id="@+id/prog_bar2"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_upload_rays"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
