--- a/app/src/main/res/layout/activity_skin_menu.xml
+++ b/app/src/main/res/layout/activity_skin_menu.xml
@@ -89,25 +89,26 @@
         android:id="@+id/actinic_keratosis"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
         android:text="@string/vascular_lesions"
         android:textColor="@color/black"
         android:textSize="16sp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="@+id/textView25"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="@+id/textView25"
-        app:layout_constraintTop_toTopOf="@+id/textView25" />
+        app:layout_constraintTop_toBottomOf="@+id/melanocytic_nevi" />
 
     <TextView
         android:id="@+id/intraepithelial_carcinoma"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:text="@string/intraepithelial_carcinoma"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/textView25"
         app:layout_constraintStart_toStartOf="@+id/textView25"
-        app:layout_constraintTop_toBottomOf="@+id/actinic_keratosis" />
+        app:layout_constraintTop_toTopOf="@+id/textView25" />
 
     <TextView
         android:id="@+id/basal_cell_carcinoma"
