--- a/app/src/main/res/layout/activity_skin_upload.xml
+++ b/app/src/main/res/layout/activity_skin_upload.xml
@@ -104,9 +104,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
+        android:indeterminateTint="@color/color1"
         app:layout_constraintBottom_toTopOf="@+id/btn_upload_rays"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_skin" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
