--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -46,6 +46,10 @@
                     android:title="@string/logout"
                     android:icon="@drawable/logout" />
 
+                <item android:id="@+id/nav_delete"
+                    android:title="@string/delete_account"
+                    android:icon="@drawable/delete" />
+
             </menu>
         </item>
     </group>
