--- a/app/src/main/res/layout/activity_patient_edit.xml
+++ b/app/src/main/res/layout/activity_patient_edit.xml
@@ -21,17 +21,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ProgressBar
-        android:id="@+id/progrsess_edit"
-        android:layout_width="23dp"
-        android:layout_height="21dp"
-        android:layout_gravity="center"
-        android:indeterminateTint="@color/color2"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@+id/profile_pic"
-        app:layout_constraintEnd_toEndOf="@+id/profile_pic"
-        app:layout_constraintStart_toStartOf="@+id/profile_pic"
-        app:layout_constraintTop_toTopOf="@+id/profile_pic" />
+
 
 
     <ImageView
@@ -221,6 +211,16 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/txt_reset"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />\
+    <ProgressBar
+        android:id="@+id/progrsess_edit2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTint="@color/color2"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
