--- a/app/src/main/res/layout/activity_chat_useer.xml
+++ b/app/src/main/res/layout/activity_chat_useer.xml
@@ -41,10 +41,25 @@
         app:layout_constraintTop_toBottomOf="@id/icon_back"
         app:layout_constraintBottom_toBottomOf="parent"
         android:background="@drawable/background_chat">
+
+        <EditText
+            android:id="@+id/search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/search"
+            android:textColorHint="@color/gray"
+            android:inputType="text"
+            android:paddingLeft="40dp"
+            android:paddingRight="40dp"
+            android:textColor="@color/black"
+
+
+            />
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycle_chat"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="40dp"
             android:clipToPadding="false"
             android:orientation="vertical"
             android:overScrollMode="never"
@@ -69,6 +84,7 @@
             android:textColor="@color/error"
             android:visibility="gone"
             />
+
 
 
     </FrameLayout>
