--- a/app/src/main/res/layout/activity_chat_useer.xml
+++ b/app/src/main/res/layout/activity_chat_useer.xml
@@ -49,9 +49,11 @@
             android:hint="@string/search"
             android:textColorHint="@color/gray"
             android:inputType="text"
+            android:textSize="16dp"
             android:paddingLeft="40dp"
             android:paddingRight="40dp"
             android:textColor="@color/black"
+            android:backgroundTint="@color/white"
 
 
             />
