--- a/app/src/main/res/layout/item_select_doctor.xml
+++ b/app/src/main/res/layout/item_select_doctor.xml
@@ -41,17 +41,31 @@
 
     <TextView
         android:id="@+id/doc_medical"
-        android:layout_width="328dp"
-        android:layout_height="22dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:textColor="@color/gray"
         android:textSize="12dp"
+        app:layout_constraintTop_toBottomOf="@id/view_support"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/imag_profile"
-        app:layout_constraintTop_toBottomOf="@id/view_support" />
+        app:layout_constraintStart_toEndOf="@id/imag_profile" />
+
+    <TextView
+        android:id="@+id/doc_lastmessage"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:textColor="@color/gray"
+        android:textSize="12dp"
+        app:layout_constraintTop_toBottomOf="@id/view_support"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/imag_profile" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
