--- a/app/src/main/res/layout/item_select_doctor.xml
+++ b/app/src/main/res/layout/item_select_doctor.xml
@@ -63,7 +63,7 @@
         android:maxLines="1"
         android:textColor="@color/gray"
         android:textSize="12dp"
-        app:layout_constraintTop_toBottomOf="@id/view_support"
+        app:layout_constraintTop_toBottomOf="@+id/doc_medical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/imag_profile" />
 
