--- a/app/src/main/res/layout/chat_item_recieved_message.xml
+++ b/app/src/main/res/layout/chat_item_recieved_message.xml
@@ -35,4 +35,13 @@
         app:layout_constraintTop_toBottomOf="@id/textmessage"
         tools:ignore="SmallSp" />
 
+    <ImageView
+        android:id="@+id/img_reciever"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_margin="10dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintStart_toStartOf="@id/textmessage"
+        app:layout_constraintTop_toBottomOf="@id/textmessage"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
